<resources>
  <string name="app_name">Nursery Notes</string>
  <string name="title_activity_main">Recent Activities</string>
  <string name="tab_text_1">Child 1</string>
  <string name="tab_text_2">Child 2</string>

  <string name="info_ok">OK</string>
  <string name="date_label">Date:</string>
  <string name="sign_out">Sign out</string>
  <string name="login_failure">Unable to sign in with the provided credentials</string>

  <string name="permissions_title">Permissions</string>
  <string name="settings">Settings</string>

  <string name="activity_format">&#8220;%s&#8221;</string>

  <string name="name_of_activity">Name of activity</string>
  <string name="name_of_child">Name of Child</string>
  <string name="activity_details">Activity Details</string>
  <string name="word_activity">Activity</string>
  <string name="word_child">Child</string>
  <string name="record_span_format">%1$s %2$s-%3$s</string>
  <string name="end_time">End Time</string>
  <string name="start_time">Start Time</string>
  <string name="record_date">Date</string>
  <string name="recent_activities">Recent Activities</string>
  <string name="list_of_children">List of Children</string>
  <string name="list_of_activities">List of Activities</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="context_edit">Edit</string>
  <string name="context_delete">Delete</string>
</resources>
