<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.RecordEditFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/child_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <AutoCompleteTextView
        android:id="@+id/child_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_of_child"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/activity_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/child_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <AutoCompleteTextView
        android:id="@+id/activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_of_activity"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/notes_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@+id/activity_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_details"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="6"/>

   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/start_date_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@+id/notes_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record_date"
        android:inputType="none"
        android:clickable="true"
        android:editable="false"
        android:focusable="true"
        app:endIconDrawable="@drawable/ic_calendar"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/start_time_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@+id/start_date_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/end_time_layout"
      app:layout_constraintHorizontal_weight="1">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_time"
        android:inputType="none"
        android:clickable="true"
        android:editable="false"
        android:focusable="true"
        app:endIconDrawable="@drawable/ic_clock"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/end_time_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@+id/start_date_layout"
      app:layout_constraintStart_toEndOf="@id/start_time_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_weight="1">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        android:inputType="none"
        android:clickable="true"
        android:editable="false"
        android:focusable="true"
        app:endIconDrawable="@drawable/ic_clock"/>

    </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>